# siliconrt

./: .gitignore  README.md  pyproject.toml
bench/manifests/: kv_dense_v1.json
native/: CMakeLists.txt
native/bench/: README.md  aliased_restore_bench.cpp  bounded_runtime_bench.cpp  c_api_restore_bench.cpp  copy_on_grow_restore_bench.cpp  metal_bounded_sequence_bench.mm
native/include/siliconrt/: bounded_decode_session.hpp  bounded_runtime.hpp  bounded_sequence_plan.hpp  bounded_window_planner.hpp  c_api.h  cache_profile.hpp  circular_sequence_plan.hpp  copy_on_grow_decode_session.hpp  cxx_api.hpp  host_backing_store.hpp  kv_arena.hpp  kv_budget.hpp  kv_types.hpp  metal_backing_store.hpp  metal_bounded_sequence.hpp  metal_buffer_ops.hpp  metal_circular_sequence.hpp  metal_compute_runtime.hpp  metal_window_checksum.hpp  metal_window_descriptor.hpp  metal_window_gather.hpp  metal_window_linearizer.hpp  metal_window_score.hpp  metal_window_segments.hpp  metal_window_stats.hpp  partitioned_kv_arena.hpp  partitioned_prefix_store.hpp  partitioned_runtime_plan.hpp  prefix_descriptor_builder.hpp  restore_plan.hpp  storage_layout.hpp  storage_slice.hpp  trim_plan.hpp  window_policy.hpp  window_presets.hpp
native/src/: c_api.cpp  metal_backing_store.mm  metal_bounded_sequence.mm  metal_buffer_ops.mm  metal_circular_sequence.mm  metal_compute_runtime.mm  metal_window_checksum.mm  metal_window_gather.mm  metal_window_linearizer.mm  metal_window_score.mm  metal_window_stats.mm
native/tests/: aliased_restore_store_smoke.cpp  bounded_decode_session_smoke.cpp  bounded_runtime_smoke.cpp  bounded_sequence_plan_smoke.cpp  bounded_window_planner_smoke.cpp  bounded_window_smoke.cpp  c_api_borrowed_mutation_smoke.cpp  c_api_borrowed_restore_smoke.cpp  c_api_partitioned_arena_smoke.cpp  c_api_pressure.cpp  c_api_smoke.cpp  c_api_storage_handle_smoke.cpp  c_api_storage_layout_smoke.cpp  cache_profile_smoke.cpp  circular_sequence_plan_smoke.cpp  copy_on_grow_decode_session_smoke.cpp  copy_on_grow_restore_smoke.cpp  cxx_api_smoke.cpp  cxx_borrowed_api_smoke.cpp  cxx_borrowed_mutation_smoke.cpp  cxx_partitioned_arena_smoke.cpp  cxx_runtime_smoke.cpp  cxx_storage_handle_smoke.cpp  cxx_storage_layout_smoke.cpp  host_backing_store_smoke.cpp  kv_smoke.cpp  metal_backing_store_smoke.mm  metal_bounded_sequence_smoke.mm  metal_buffer_ops_smoke.mm  metal_circular_sequence_smoke.mm  metal_trim_sequence_smoke.mm  metal_window_checksum_smoke.mm  metal_window_descriptor_smoke.mm  metal_window_gather_smoke.mm  metal_window_linearizer_smoke.mm  metal_window_score_smoke.mm  metal_window_segments_smoke.mm  metal_window_stats_smoke.mm  partitioned_bounded_runtime_smoke.cpp  partitioned_kv_arena_smoke.cpp  (+8 more)
scripts/: kv_budget_math.py  kv_burst_probe.py  kv_max_kv_probe.py  kv_prefix_probe.py  metal_window_path_sweep.py  qwen35_9b_arena_sim.py  qwen35_9b_block_sweep.py  qwen35_9b_cache_math.py  qwen35_9b_mode_compare.py  qwen35_9b_partitioned_plan.py  qwen35_9b_restore_plan.py  qwen35_bounded_fa_probe.py  qwen35_warm_burst_window_probe.py  qwen35_window_recall_probe.py  siliconrt_burst_probe.py  siliconrt_prefix_probe.py  siliconrt_pressure_probe.py
src/siliconrt/: __init__.py  prefix.py  prefix_cache.py
src/siliconrt/analysis/: __init__.py  arena_sim.py  kv_math.py  model_profiles.py  paged_kv_math.py  partitioned_runtime_math.py  restore_math.py  window_presets.py  workload_mix.py
src/siliconrt/benchmarks/: __init__.py  kv_dense_v1.py  schema.py
